--- a/index.html
+++ b/index.html
@@ -15,9 +15,24 @@
     <title>ABA</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
+    
+      <nav class="navbar-style navbar navbar-expand-lg">
       <div class="container-fluid">
-        <img class="logo" src="images/logo.svg" alt="logo" />      
+        <a class="navbar-brand" href="#">
+          <img class="logo" src="images/logo.svg" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- <img class="logo" src="images/logo.svg" alt="logo" />       -->
        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
